@@ -190,6 +190,8 @@ Release 2.13 Start 14/02/2021
 - 12/07/2021
 120. svctool: use control/global_vars for common environment variables across
      svscan services
+- 13/07/2021
+130. indimail-mta.spec: removed /sbin/chkconfig from Requires
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 2.12 Start 21/05/2020
